--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1088,19 +1088,22 @@ a.button_slider:hover {
 
 
 /* fresh projects */
-.graph_contain{position:relative;margin: 0 -17px 0;}
+.graph_contain{position:relative;margin:0;background-color: #fff;border: 1px solid #ddd;}
 .global_stats{}
 .global_stats .stat1{font-size: 20px;color: #383634;white-space: nowrap;padding:10px 0;height: 22px;}
 .global_stats .stat1 small{font-size: 14px;}
 .global_stats .stat2{font-size: 20px;font-style: normal;margin-left: 10px;color:#727272;font-weight: normal;height: 22px;}
 .global_stats h6{margin-bottom: 5px;}
 .global_stats h5{}
-#graph_price_history{width:100%;height:300px;float: left;}
+#graph_candles{height:270px;position:absolute;left:0;right:5px;}
+.graph_contain .clear_300{margin-top:270px;float:left;}
+#graph_price_history{z-index:1;height:60px;position:absolute;bottom:0;left:0;right:0;background-color: #f7f7f7;border-top: 1px solid #ddd;}
+.graph_contain .clear_50{margin-top:60px;float:left;}
 #graph_orders{width:100%;height:300px;float: left;}
-.graph_options{background-color: #fff;border: 1px solid #ddd;border-collapse: collapse;bottom: -8px;position: relative;margin: -8px -2px 0;}
-.graph_options a{float: left;color: #727272;padding: 3px 11px;}
+.graph_options{background-color: #fff;border: 1px solid #ddd;border-collapse: collapse;position: relative;margin:0 0 2px;}
+.graph_options a{float: left;color: #444;padding: 3px 11px;}
 .graph_options a:hover{color:#383634;}
-.graph_options a.last{}
+.graph_options a.last{border-right: 3px double #ddd;}
 .graph_options a.selected{background-color: #f7f7f7;color: #444;border-left: 1px solid #ddd;border-right: 1px solid #ddd;text-decoration:underline;}
 .graph_options span{float: right;margin-right: 38px;display:block;}
 .graph_options span select{padding: 1px;font-size: 13px;font-family: 'Open Sans', sans-serif;background-color: #FFF;border:1px solid #aaa;color: #727272;}
@@ -1110,6 +1113,13 @@ a.button_slider:hover {
 #tooltip .date{font-size:12px;}
 #tooltip .price{color: #00BDBD;font-size: 20px;font-weight: bold;}
 #tooltip .price.alt{color:#53DB80;}
+.graph_contain .drag_zoom{z-index:2;position:absolute;bottom:0;top:270px;left:0;right:0;background:transparent;}
+.graph_contain .drag_zoom .contain{position:relative;height:60px;}
+.graph_contain .drag_zoom .bg{cursor:grab;z-index:3;background-color:#ffea00;position:absolute;bottom:0;top:0;left:0;right:0;-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";-moz-opacity: 0.3;-khtml-opacity: 0.3;opacity: 0.3;}
+.graph_contain .drag_zoom .bg.ui-draggable-dragging{cursor:grabbing;}
+.graph_contain .drag_zoom .handle{z-index:4;bottom:0;width:5px;height:58px;background-color: #f7f7f7;border: 1px solid #aaa;position:absolute;}
+.graph_contain .drag_zoom .handle#zl{left:0;cursor:w-resize;}
+.graph_contain .drag_zoom .handle#zr{left:5;cursor:e-resize;}
 .fresh_projects {
 	float: left;
 	width: 100%;
