WLOX Multi-coin in progress.
Conflicts:
	htdocs/buy-sell.php
	htdocs/css/style.css
	htdocs/edit-order.php
	htdocs/includes/ajax.graph.php
	htdocs/includes/ajax.trades.php
	htdocs/includes/sidebar_ts.php
	htdocs/index.php
	htdocs/js/ops.js

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1088,7 +1088,8 @@ a.button_slider:hover {
 
 
 /* fresh projects */
-.graph_contain{position:relative;margin: 0 -17px 0;}
+.c_currency_big{font-family: 'Roboto', sans-serif;font-size:38px;padding:7px 9px 7px 7px;border: 1px solid #D6D6D6;background-color:#FFF;}
+.graph_contain{position:relative;margin:0;background-color: #fff;border: 1px solid #ddd;}
 .global_stats{}
 .global_stats .stat1{font-size: 20px;color: #383634;white-space: nowrap;padding:10px 0;height: 22px;}
 .global_stats .stat1 small{font-size: 14px;}
@@ -4084,6 +4085,11 @@ ul.list_empty.form_buttons {
 	color:#444;
 	border: 1px solid #444;
 }
+.filters .but_user{
+	margin-top: -5px;
+    margin-bottom: -5px;
+    display: inline-block;
+}
 
 #filters_area{
 	position:relative;
@@ -4486,7 +4492,7 @@ ul.list_empty.form_buttons {
 .section_label .right{
 	float: left;
     margin-top: 10px;}
-
+.section_label select {font-family: 'Roboto', sans-serif;font-size:20px;padding:7px 9px 7px 7px;border: 1px solid #D6D6D6;background-color:#FFF;margin: -8px 0;font-weight: 300;}
 .testimonials-4 .content {
 	padding: 20px 20px 25px 20px;
 	border: 1px solid #eee;
